--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
 /*Universal Styles*/
+body {
+    background-color: deepskyblue;
+    font-family: 'Times New Roman', serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+header {
+    text-align: center;
+    font-style: italic;
+    margin-top: 5px;
+}
+
+h1 {
+    padding: 36px;
+    font-size: 40px;
+}
+
+p {
+    text-align: justify;
+    font-size: 36px;
+}
+
+.Table1 {
+    text-align: center;
+    border: 3px solid black;
+    background-color: steelblue;
+}
+
+thead {
+    color: antiquewhite;
+}
+
+td {
+    border: 2px solid black;
+    width: 200px;
+}
+
+.Table2 {
+    text-align: center;
+    border: 3px solid black;
+    background-color: steelblue;
+}
