--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /*Universal Styles*/
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: deepskyblue;
     font-family: 'Times New Roman', serif;
